--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     
     <title>Netflix Roulette</title>
-  <link href="main.css" rel="stylesheet"></head>
+  </head>
   <body>
     <div id="root"></div>
-  <script src="./main.js"></script></body>
+  </body>
   <script type="text/javascript" src="main.js"></script>
 </html>
